# insighthub

./: .aiderignore  .env.example  .gitignore  .windsurfrules  AIDER_AUDITOR_PROMPT.md  GEMINI.md  InsightHub.json  MINDMAP_IDEAS.md  PROJECT_DESCRIPTION_LONGFORM.md  README.md  TESTING.md  VISION.md  WORKFLOW_VALIDATION_REPORT.md  commit_message.txt  demo_optimization.py  manual_test_enhanced.py  playwright.config.ts  podcast_prompt.md  pyproject.toml  pytest.ini  pytest_output.txt  requirements-dev.txt  requirements.txt  run_aider_audit.ps1  run_local_youtube_test.py  run_reddit_test.py  run_youtube_test.py  test_langsmith_dashboard.py  test_monitoring_dashboard.py  vitest.config.js
.aider/: .aider.conf.yml
.cursor/: cloud.md  mcp-playwright.json
.demo_experiments/: experiment_exp_1751175404_6337.json
.monitoring/: workflows.json
.taskmaster/: config.json  state.json
docs/: ARCHITECTURE.md  CONFIG_GUIDE.md  DEVELOPER_HANDBOOK.md  GETTING_STARTED.md  INSIGHTHUB_STRATEGIC_POSITIONING.md  Learnings.md  PLAYWRIGHT_MCP_INTEGRATION.md  PRD_automatisoitu_työjono.md  PROJECT_CONTEXT.md  PROJECT_DESCRIPTION_LONGFORM.md  RAG_WORKFLOW_COPILOT_BRAINSTORM.md  README.md  VIDEO_STORY_OUTLINE.md  VISION.md  index.md  todo.md
insighthub-frontend/: .quality-gate.json  .sonarqube.properties  AI-TESTING.md  COMPONENT_GUIDELINES.md  QA_PROCESSES.md  README.md  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
output/: reddit_urls_20250218_080318.txt  reddit_urls_20250218_080445.txt  reddit_urls_20250218_080617.txt  reddit_urls_20250218_080742.txt
reddit_posts/: reddit_urls_20250216_202211.txt  reddit_urls_20250217_095320.txt  reddit_urls_20250217_102525.txt  reddit_urls_20250217_102810.txt  reddit_urls_20250217_102839.txt  reddit_urls_20250218_081046.txt  reddit_urls_20250218_081227.txt  reddit_urls_20250218_102225.txt  reddit_urls_20250219_082558.txt  reddit_urls_20250224_090937.txt  reddit_urls_20250224_093857.txt  reddit_urls_20250303_091316.txt  reddit_urls_20250303_094951.txt  reddit_urls_20250303_124444.txt  reddit_urls_20250303_134343.txt  reddit_urls_20250305_101135.txt  reddit_urls_20250305_104701.txt  reddit_urls_20250305_111701.txt  reddit_urls_20250306_142803.txt  reddit_urls_20250310_084455.txt  reddit_urls_20250310_092044.txt  reddit_urls_20250310_132858.txt  reddit_urls_20250311_091826.txt  reddit_urls_20250317_103059.txt  reddit_urls_20250317_103127.txt  reddit_urls_20250317_103138.txt  reddit_urls_20250317_130337.txt  reddit_urls_20250317_132748.txt  reddit_urls_20250319_081845.txt  reddit_urls_20250321_090114.txt  reddit_urls_20250324_080326.txt  reddit_urls_20250324_100802.txt  reddit_urls_20250331_092739.txt  reddit_urls_20250505_115626.txt
scripts/: analyze-ai-test-results.js  create_worktree.ps1  create_worktree.sh  generate_ts_types.py  switch_worktree.ps1  switch_worktree.sh  test-playwright-mcp.js  tm-test-guard.ps1  tm-test-guard.sh  update_worktree.ps1  update_worktree.sh
(+203 files in other folders)
